# task_automator

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  autoclear.py  controller.py
src/api/: cli.py
src/config/: settings.py
src/core/: controller.py
src/parsers/: parse.py
