[project]
name = "task-automator"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.9.4",
    "psutil>=7.2.2",
    "pytimeparse>=1.1.8",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[tool.hatch.version]
source = "vcs"

[project.scripts]
autoclear = "api.cli:app"
autoclear-worker = "autoclear:main"
